<resources>
    <string name="app_name" translatable="false">World Clock</string>
    <string name="this_process_may_contains_ads">This process may contains ads</string>
    <string name="alarm_clock">Alarm Clock</string>
    <string name="language">Language</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="set_alarm_time">Set Alarm Time</string>
    <string name="set_your_alarm_time_with_ease_to_align_perfectly_with_your_plans_enjoy_effortless_scheduling_with_customizable_alarm_options">Set your alarm time with ease to align perfectly with your plans. Enjoy effortless scheduling with  customizable alarm options.</string>
    <string name="global_watch">Global Watch</string>
    <string name="global_watch_offers_a_seamless_way_to_track_time_across_various_cities_and_countries_ensuring_you_re_always_aware_of_different_time_zones">Global Watch offers a seamless way to track time across various cities and countries, ensuring you’re always aware of different time zones.</string>
    <string name="timer_running_out">Timer Running Out</string>
    <string name="the_timer_feature_allows_you_to_set_a_countdown_for_specific_durations_helping_you_track_time_for_tasks_or_events">The timer feature allows you to set a countdown for specific durations, helping you track time for tasks or events.</string>
    <string name="get_premium_today">Get Premium Today</string>
    <string name="get_access_to_all_features">Get Access To All Features</string>
    <string name="ad_free_experience">Ad Free Experience</string>
    <string name="daily_content_update">Daily Content Update</string>
    <string name="_6_month">6 Month</string>
    <string name="yearly">Yearly</string>
    <string name="life_time">Life Time</string>
    <string name="cancel_anytime_on_google_play_store">Cancel Anytime On Google Play Store</string>
    <string name="terms_of_services"><u>Terms Of Services</u></string>
    <string name="privacy_policy"><u>Privacy Policy</u></string>
    <string name="subscribed_successfully">Subscribed Successfully</string>
    <string name="subscription_failed">Subscription Failed</string>
    <string name="clock">Clock</string>
    <string name="alarm">Alarm</string>
    <string name="stopwatch">Stopwatch</string>
    <string name="timer">Timer</string>
    <string name="compass">Compass</string>
    <string name="widgets">Widgets</string>
    <string name="search_city_or_region">Search city or region</string>
    <string name="hours_ahead">%1$s Hours Ahead</string>
    <string name="hours_behind">%1$s Hours Behind</string>
    <string name="same_time">Same Time</string>
    <string name="add_city">Add City</string>
    <string name="no_alarm_created">No Alarm Created</string>
    <string name="create_the_new_alarm_by_tapping_the_button">Create the new alarm by tapping the + button</string>
    <string name="permission">Permission</string>
    <string name="overlay_permission_is_needed_to_work_alarm_properly_on_android_10_please_grant_it">"Overlay permission is needed to work Alarm properly on Android 10+, Please grant it. "</string>
    <string name="allow">Allow</string>
    <string name="cancel">Cancel</string>
    <string name="upcoming_alarm">Upcoming Alarm</string>
    <string name="save">Save</string>
    <string name="alarm_sound">Alarm Sound:</string>
    <string name="label">Label:</string>
    <string name="snooze">Snooze:</string>
    <string name="vibrate">Vibrate:</string>
    <string name="once">Once</string>
    <string name="alarm_time_is_now">Alarm time is now!</string>
    <string name="no_active_alarms">No active alarms</string>
    <string name="stop_watch">Stop Watch</string>
    <string name="set">SET</string>
    <string name="min">MIN</string>
    <string name="sec">SEC</string>
    <string name="loading_sensors">Loading sensors…</string>
    <string name="widget_clock">Widget Clock</string>
    <string name="add">Add</string>
    <string name="no_widgets_created">No widgets created</string>
    <string name="create_the_new_widget_by_clicking_the_add_button">Create the new widget by clicking the Add button</string>
    <string name="delete_widget">Delete Widget</string>
    <string name="are_you_sure_you_want_to_delete_this_widget">Are you sure you want to delete this widget?</string>
    <string name="delete">Delete</string>
    <string name="delete_clock">Delete Clock</string>
    <string name="are_you_sure_you_want_to_delete_this_clock">Are you sure you want to delete this clock?</string>
    <string name="settings1">Settings</string>
    <string name="terms_amp_conditions">Terms And Conditions</string>
    <string name="feedback">Feedback</string>
    <string name="share_app">Share App</string>
    <string name="rate_us">Rate Us</string>
    <string name="more_apps">More Apps</string>
    <string name="fast_processing">Fast Processing</string>
    <string name="get_npremium_access">GET\nPREMIUM ACCESS</string>
    <string name="enjoy_access_to_all_premium_features">Enjoy access to all premium features</string>
    <string name="purchase">Purchase</string>
    <string name="upgrade_to_premium_with_a_one_time_payment_and_enjoy_lifetime_access_to_exclusive_features_ad_free_content_and_priority_support">Upgrade to premium with a one- time payment and enjoy lifetime access to exclusive features, ad- free content and priority support.</string>
    <string name="continue_with_ads">Continue With Ads</string>
    <string name="for_lifetime">for lifetime</string>
    <string name="continue1">Continue</string>
    <string name="get_premium">Get Premium</string>
    <string name="unlock_all_features_and_remove_ads">Unlock all features and remove ads</string>
    <string name="new_alarm">" New Alarm"</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="when_you_subscribe_to_our_premium_content_your_subscription_will_renew_automatically_and_you_will_be_charged_at_start_of_each_billing_cycle_until_you_cancel_the_subscription">When you subscribe to our premium content, your subscription will renew automatically and you will be charged at start of each billing cycle until you cancel the subscription.</string>
    <string name="access_to_all_premium_features">Access To All Premium Features</string>
    <string name="please_add_timer_to_start">Please Add Timer to Start!</string>
    <string name="set_your_alarm_with_ease_using_customizable_options_for_effortless_scheduling">Set your alarm with ease using customizable \noptions for effortless scheduling.</string>
    <string name="global_watch_provides_a_streamlined_solution_for_monitoring_global_time_zones">Global Watch Provides A streamlined Solution \nFor Monitoring Global Time Zones.</string>
    <string name="the_timer_feature_enables_countdowns_for_specific_tasks_or_events">The Timer Feature Enables Countdowns For \nSpecific Tasks Or Events.</string>
    <string name="radar_default"><u>Default</u></string>

    <string name="voice_reminder">Voice Reminder</string>
    <string name="sleep_sound">Sleep Sound</string>
    <string name="all_reminders">All Reminders</string>
    <string name="no_reminders_yet">No Reminders Yet</string>
    <string name="create_new_reminder_by_tappingn_nthe_button">Create new reminder by tappingn\nthe “+” button</string>

    <string name="create_reminder_for">Create a new \"%1$s\" reminder by tapping the \"+\" button</string>
    <string name="format_time">%1$02d:%2$02d %3$s</string>
    <string name="label_am">AM</string>
    <string name="label_pm">PM</string>
    <string name="loading">Loading…</string>
</resources>